--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "api-upload",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "paulodevmais <paulo.sergio@tallos.com.br>",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mongoose": "^6.8.1",
-    "multer": "^1.4.5-lts.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+	"name": "api-upload",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "nodemon index.js",
+		"test": "jest"
+	},
+	"keywords": [],
+	"author": "paulodevmais <paulo.sergio@tallos.com.br>",
+	"license": "MIT",
+	"dependencies": {
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"mongoose": "^6.8.1",
+		"multer": "^1.4.5-lts.1"
+	},
+	"devDependencies": {
+		"jest": "^29.3.1",
+		"nodemon": "^2.0.20"
+	}
 }
