--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"mongoose": "^6.8.1",
-		"multer": "^1.4.5-lts.1"
+		"multer": "^1.4.5-lts.1",
+		"supertest": "^6.3.3"
 	},
 	"devDependencies": {
 		"jest": "^29.3.1",
